monitoring/prom-svc-lb.yaml
# Данный сервис оставил просто для истории или если понадобится (использовал его в локальном черновике)
apiVersion: v1
kind: Service
metadata:
  name: prom-svc-lb
  labels:
    app: kube-prometheus-stack-prometheus
    app.kubernetes.io/instance: prometheus-community
    app.kubernetes.io/part-of: kube-prometheus-stack
spec:
  type: LoadBalancer
  ports:
  - name: http-web
    port: 9090
    protocol: TCP
    targetPort: 9090
    nodePort: 30090
  - appProtocol: http
    name: reloader-web
    port: 8080
    protocol: TCP
    targetPort: reloader-web
  selector:
    app.kubernetes.io/name: prometheus
    operator.prometheus.io/name: prometheus-community-kube-prometheus
