monitoring/grafana-ingress.yaml
# Example with define host
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "myca"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /(.*)  
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-community-grafana
            port:
              number: 80
    host: "grafana.158.160.150.250.nip.io"
  tls:
  - secretName: grafanacert
    hosts:
    - 158.160.150.250
    - 158.160.150.250.nip.io
    - web.158.160.150.250.nip.io
    - pgadmin.158.160.150.250.nip.io
    - grafana.158.160.150.250.nip.io

# Show:
# curl -kv https://grafana.158.160.150.250.nip.io/
